# rust-rest-api-template

./: Cargo.toml  Dockerfile  compose.yaml
src/: config.rs  controllers.rs  http.rs  lib.rs  main.rs
src/controllers/: hello.rs  todo.rs
src/http/: hello_router.rs  todo_router.rs
src/models/: todo.rs
