[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.7" }
tokio = { version = "1.35", features = ["full"] }
tower = "0.4"
utoipa = { version = "4.1", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version="6.0", features= ["axum"] }
uuid = { version = "1.6", features=["v4", "serde"] }
sqlx = { version = "0.7", features=["postgres"] }
anyhow = "1.0"
dotenv = "0.15"
